fix: исправить название метода в классе managers.FileBackedTasksManagerTest feat:добавить equals/hashcode в иерархию задач ; fix: добавить выставление currentId после загрузки задач в FileBackedTaskManager ;